--- a/FHStarterProject/fhconfig.plist
+++ b/FHStarterProject/fhconfig.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
 <dict>
 	<key>host</key>
-	<string>&lt;Replace with the corret host value&gt;</string>
+	<string>&lt;host&gt;</string>
 	<key>appid</key>
-	<string>&lt;Replace with your app id&gt;</string>
+	<string>&lt;appid&gt;</string>
 	<key>appkey</key>
-	<string>&lt;Replace with your app key&gt;</string>
+	<string>&lt;appkey&gt;</string>
 	<key>mode</key>
-	<string>&lt;dev or live&gt;</string>
+	<string>&lt;mode&gt;</string>
 </dict>
 </plist>
