--- a/FHStarterProject/fhconfig.plist
+++ b/FHStarterProject/fhconfig.plist
@@ -6,6 +6,8 @@
 	<string><host></string>
 	<key>appid</key>
 	<string><appid></string>
+	<key>projectid</key>
+	<string><projectid></string>
 	<key>appkey</key>
 	<string><appkey></string>
 	<key>mode</key>
