--- a/app-template.json
+++ b/app-template.json
@@ -2,7 +2,7 @@
   "name": "Blank Native iOS Client",
   "type": "client_native_ios",
   "repoUrl": "https://github.com/feedhenry/fh-ios-sdk-blank-app.git",
-  "repoBranch": "refs/heads/5202-ngui-template-configs",
+  "repoBranch": "refs/heads/master",
   "icon": "icon-edit",
   "category": "Blank Apps"
 }
