--- a/app-template.json
+++ b/app-template.json
@@ -3,6 +3,6 @@
   "type": "client_native_ios",
   "repoUrl": "https://github.com/feedhenry/fh-ios-sdk-blank-app.git",
   "repoBranch": "refs/heads/master",
-  "icon": "icon-edit",
+  "icon": "icon-apple",
   "category": "Blank Apps"
 }
