--- a/app-template.json
+++ b/app-template.json
@@ -1,4 +1,5 @@
 {
+  "id": "blank_native_ios_client",
   "name": "Blank Native iOS Client",
   "type": "client_native_ios",
   "repoUrl": "https://github.com/feedhenry/fh-ios-sdk-blank-app.git",
