--- a/app-template.json
+++ b/app-template.json
@@ -2,7 +2,7 @@
   "id": "blank_native_ios_client",
   "name": "Blank Native iOS Client",
   "type": "client_native_ios",
-  "repoUrl": "https://github.com/feedhenry/fh-ios-sdk-blank-app.git",
+  "repoUrl": "git://github.com/feedhenry/fh-ios-sdk-blank-app.git",
   "repoBranch": "refs/heads/6066-connection-bugfixing",
   "icon": "icon-apple",
   "category": "Blank Apps"
